--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-filter==0.9.2
 django-filters==0.1.0
 django-imagekit==3.2.5
 django-rest-swagger==0.2.6
-djangorestframework==3.0.2
+djangorestframework>=2.4,<3.0
 factory-boy==2.4.1
 pilkit==1.1.12
 six==1.9.0
