Corretta configurazione Apache per servire la UI Client (atm-twitter-client).

--- a/docs/apache/atm-tweet-server.conf
+++ b/docs/apache/atm-tweet-server.conf
@@ -23,7 +23,7 @@
 
     Alias /static/ /var/www/django/projects/atm-tweet-server/static/
     Alias /thumbs/ /var/www/django/projects/atm-tweet-server/thumbs/
-    Alias /config/ /var/www/django/projects/atm-tweet-server/static/
+    Alias /client/ /var/www/django/projects/atm-tweet-server/static/
 
     <Directory /var/www/django/projects/atm-tweet-server/static/>
         Order allow,deny
